[package]
name = "reverse-osmosis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
ignore = "0.4.18"
structopt = { version = "0.3.26", features = ["color", "suggestions"] }
tracing = { version = "0.1.36", features = ["attributes"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "time"] }
